@@ -1,6 +1,13 @@
 package gov.cdc.nbs.deduplication.merge.handler;
 
+import gov.cdc.nbs.deduplication.config.auth.user.NbsUserDetails;
+import gov.cdc.nbs.deduplication.merge.id.LocalUidGenerator;
+import gov.cdc.nbs.deduplication.merge.id.LocalUidGenerator.EntityType;
 import gov.cdc.nbs.deduplication.merge.model.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.core.annotation.Order;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
@@ -10,15 +17,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
-import gov.cdc.nbs.deduplication.config.auth.user.NbsUserDetails;
-import gov.cdc.nbs.deduplication.merge.id.LocalUidGenerator;
-import gov.cdc.nbs.deduplication.merge.id.LocalUidGenerator.EntityType;
-
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
 @Component
 @Order(9)
 public class PersonMortalityMergeHandler implements SectionMergeHandler {
@@ -26,7 +24,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
   private static final String SOURCE_ID = "sourceId";
   private static final String POSTAL_LOCATOR_UID = "postal_locator_uid";
 
-  static final String UPDATE_PERSON_AS_OF_DEATH = """
+  static final String UPDATE_PERSON_AS_OF_DEATH =
+      """
       UPDATE person
       SET as_of_date_morbidity = (
               SELECT as_of_date_morbidity
@@ -38,7 +37,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
       WHERE person_uid = :survivorId
       """;
 
-  static final String UPDATE_PERSON_DECEASED_IND = """
+  static final String UPDATE_PERSON_DECEASED_IND =
+      """
       UPDATE person
       SET deceased_ind_cd = (
               SELECT deceased_ind_cd
@@ -50,7 +50,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
       WHERE person_uid = :survivorId
       """;
 
-  static final String UPDATE_PERSON_DATE_OF_DEATH = """
+  static final String UPDATE_PERSON_DATE_OF_DEATH =
+      """
       UPDATE person
       SET deceased_time = (
               SELECT deceased_time
@@ -65,7 +66,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
   // Returns 0 if the survivorId already has a birth locator entry
   // Returns 1 if the survivorId does not have a birth locator and the sourceId
   // does
-  static final String SHOULD_CREATE_POSTAL_LOCATOR = """
+  static final String SHOULD_CREATE_POSTAL_LOCATOR =
+      """
       SELECT
         CASE
           WHEN (
@@ -92,7 +94,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
         END AS isMissingElp;
       """;
 
-  static final String INSERT_ENTITY_LOCATOR_PARTICIPATION = """
+  static final String INSERT_ENTITY_LOCATOR_PARTICIPATION =
+      """
       INSERT INTO Entity_locator_participation (
         entity_uid,
         locator_uid,
@@ -125,7 +128,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
       );
           """;
 
-  static final String INSERT_POSTAL_LOCATOR = """
+  static final String INSERT_POSTAL_LOCATOR =
+      """
       INSERT INTO Postal_locator (
         postal_locator_uid,
         add_time,
@@ -144,7 +148,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
       );
       """;
 
-  static final String UPDATE_DEATH_CITY = """
+  static final String UPDATE_DEATH_CITY =
+      """
       UPDATE Postal_locator
       SET
         city_desc_txt = (
@@ -166,7 +171,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
         AND Entity_uid = :survivorId)
           """;
 
-  static final String UPDATE_DEATH_STATE_AND_COUNTY = """
+  static final String UPDATE_DEATH_STATE_AND_COUNTY =
+      """
       UPDATE Postal_locator
       SET
         state_cd = (
@@ -198,7 +204,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
         AND Entity_uid = :survivorId)
           """;
 
-  static final String UPDATE_DEATH_COUNTRY = """
+  static final String UPDATE_DEATH_COUNTRY =
+      """
       UPDATE Postal_locator
       SET
         cntry_cd = (
@@ -220,7 +227,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
         AND Entity_uid = :survivorId)
           """;
 
-  static final String SELECT_DEATH_CITY_FOR_AUDIT_BEFORE_UPDATE = """
+  static final String SELECT_DEATH_CITY_FOR_AUDIT_BEFORE_UPDATE =
+      """
           SELECT postal_locator_uid, city_desc_txt
           FROM Postal_locator
           WHERE postal_locator_uid = (
@@ -230,7 +238,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
           )
       """;
 
-  static final String SELECT_DEATH_STATE_AND_COUNTY_FOR_AUDIT_BEFORE_UPDATE = """
+  static final String SELECT_DEATH_STATE_AND_COUNTY_FOR_AUDIT_BEFORE_UPDATE =
+      """
           SELECT postal_locator_uid, state_cd, cnty_cd
           FROM Postal_locator
           WHERE postal_locator_uid = (
@@ -240,7 +249,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
           )
       """;
 
-  static final String SELECT_DEATH_COUNTRY_FOR_AUDIT_BEFORE_UPDATE = """
+  static final String SELECT_DEATH_COUNTRY_FOR_AUDIT_BEFORE_UPDATE =
+      """
           SELECT postal_locator_uid, cntry_cd
           FROM Postal_locator
           WHERE postal_locator_uid = (
@@ -269,7 +279,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
     mergePersonMortality(request.survivingRecord(), request.mortality());
   }
 
-  private void mergePersonMortality(String survivorId, PatientMergeRequest.MortalityFieldSource fieldSource) {
+  private void mergePersonMortality(
+      String survivorId, PatientMergeRequest.MortalityFieldSource fieldSource) {
     updateAsOf(survivorId, fieldSource.asOf());
     updateDeceasedFlag(survivorId, fieldSource.deceased());
     updateDateOfDeath(survivorId, fieldSource.dateOfDeath());
@@ -294,7 +305,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
     }
   }
 
-  private void updateDeathAddress(String survivorId, PatientMergeRequest.MortalityFieldSource fieldSource) {
+  private void updateDeathAddress(
+      String survivorId, PatientMergeRequest.MortalityFieldSource fieldSource) {
     updateDeathCity(survivorId, fieldSource.deathCity());
     updateDeathStateAndCounty(survivorId, fieldSource.deathState());
     updateDeathCountry(survivorId, fieldSource.deathCountry());
@@ -308,7 +320,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
     MapSqlParameterSource params = new MapSqlParameterSource();
     params.addValue(SURVIVOR_ID, survivorId);
     params.addValue(SOURCE_ID, sourceId);
-    Boolean shouldCreate = nbsTemplate.queryForObject(SHOULD_CREATE_POSTAL_LOCATOR, params, Boolean.class);
+    Boolean shouldCreate =
+        nbsTemplate.queryForObject(SHOULD_CREATE_POSTAL_LOCATOR, params, Boolean.class);
     if (Boolean.TRUE.equals(shouldCreate)) {
       createDeathLocator(survivorId);
     }
@@ -316,7 +329,8 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
 
   private void createDeathLocator(String survivorId) {
     long locatorId = idGenerator.getNextValidId(EntityType.NBS).id();
-    NbsUserDetails currentUser = (NbsUserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+    NbsUserDetails currentUser =
+        (NbsUserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
 
     // Create Entity_locator_participation
     MapSqlParameterSource params = new MapSqlParameterSource();
@@ -326,9 +340,11 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
 
     nbsTemplate.update(INSERT_ENTITY_LOCATOR_PARTICIPATION, params);
 
-    addAuditInsertEntry("Entity_locator_participation", Map.of(
-        "entity_uid", survivorId,
-        "locator_uid", locatorId));
+    addAuditInsertEntry(
+        "Entity_locator_participation",
+        Map.of(
+            "entity_uid", survivorId,
+            "locator_uid", locatorId));
 
     // Create Postal_locator
     MapSqlParameterSource locatorParams = new MapSqlParameterSource();
@@ -337,14 +353,13 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
 
     nbsTemplate.update(INSERT_POSTAL_LOCATOR, locatorParams);
 
-    addAuditInsertEntry("Postal_locator", Map.of(
-        POSTAL_LOCATOR_UID, locatorId));
+    addAuditInsertEntry("Postal_locator", Map.of(POSTAL_LOCATOR_UID, locatorId));
   }
 
   private void addAuditInsertEntry(String tableName, Map<String, Object> data) {
     AuditInsertAction insertAction = new AuditInsertAction(data);
-    RelatedTableAudit relatedTableAudit = new RelatedTableAudit(tableName, List.of(),
-        Collections.singletonList(insertAction));
+    RelatedTableAudit relatedTableAudit =
+        new RelatedTableAudit(tableName, List.of(), Collections.singletonList(insertAction));
     audit.getRelatedTableAudits().add(relatedTableAudit);
   }
 
@@ -354,23 +369,26 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
       ensurePostalLocator(survivorId, sourceId);
 
       // fetch current value for audit
-      List<Map<String, Object>> oldRows = nbsTemplate.queryForList(SELECT_DEATH_CITY_FOR_AUDIT_BEFORE_UPDATE,
-          new MapSqlParameterSource(SURVIVOR_ID, survivorId));
+      List<Map<String, Object>> oldRows =
+          nbsTemplate.queryForList(
+              SELECT_DEATH_CITY_FOR_AUDIT_BEFORE_UPDATE,
+              new MapSqlParameterSource(SURVIVOR_ID, survivorId));
 
       // update surviving record's 'DTH' postal_locator to selected value
       updatePersonField(survivorId, sourceId, UPDATE_DEATH_CITY);
 
       // audit update
-      List<AuditUpdateAction> updateActions = oldRows.stream()
-          .map(row -> {
-            Map<String, Object> values = new HashMap<>();
-            values.put("city_desc_txt", row.get("city_desc_txt"));
+      List<AuditUpdateAction> updateActions =
+          oldRows.stream()
+              .map(
+                  row -> {
+                    Map<String, Object> values = new HashMap<>();
+                    values.put("city_desc_txt", row.get("city_desc_txt"));
 
-            return new AuditUpdateAction(
-                Map.of(POSTAL_LOCATOR_UID, row.get(POSTAL_LOCATOR_UID)),
-                values);
-          })
-          .toList();
+                    return new AuditUpdateAction(
+                        Map.of(POSTAL_LOCATOR_UID, row.get(POSTAL_LOCATOR_UID)), values);
+                  })
+              .toList();
 
       addAuditUpdateEntry(updateActions);
     }
@@ -382,24 +400,26 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
       ensurePostalLocator(survivorId, sourceId);
 
       // fetch current value for audit
-      List<Map<String, Object>> oldRows = nbsTemplate.queryForList(
-          SELECT_DEATH_STATE_AND_COUNTY_FOR_AUDIT_BEFORE_UPDATE,
-          new MapSqlParameterSource(SURVIVOR_ID, survivorId));
+      List<Map<String, Object>> oldRows =
+          nbsTemplate.queryForList(
+              SELECT_DEATH_STATE_AND_COUNTY_FOR_AUDIT_BEFORE_UPDATE,
+              new MapSqlParameterSource(SURVIVOR_ID, survivorId));
 
       // update surviving record's 'DTH' postal_locator to selected value
       updatePersonField(survivorId, sourceId, UPDATE_DEATH_STATE_AND_COUNTY);
 
-      List<AuditUpdateAction> updateActions = oldRows.stream()
-          .map(row -> {
-            Map<String, Object> values = new HashMap<>();
-            values.put("state_cd", row.get("state_cd"));
-            values.put("cnty_cd", row.get("cnty_cd"));
+      List<AuditUpdateAction> updateActions =
+          oldRows.stream()
+              .map(
+                  row -> {
+                    Map<String, Object> values = new HashMap<>();
+                    values.put("state_cd", row.get("state_cd"));
+                    values.put("cnty_cd", row.get("cnty_cd"));
 
-            return new AuditUpdateAction(
-                Map.of(POSTAL_LOCATOR_UID, row.get(POSTAL_LOCATOR_UID)),
-                values);
-          })
-          .toList();
+                    return new AuditUpdateAction(
+                        Map.of(POSTAL_LOCATOR_UID, row.get(POSTAL_LOCATOR_UID)), values);
+                  })
+              .toList();
 
       addAuditUpdateEntry(updateActions);
     }
@@ -411,30 +431,33 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
       ensurePostalLocator(survivorId, sourceId);
 
       // fetch current value for audit
-      List<Map<String, Object>> oldRows = nbsTemplate.queryForList(SELECT_DEATH_COUNTRY_FOR_AUDIT_BEFORE_UPDATE,
-          new MapSqlParameterSource(SURVIVOR_ID, survivorId));
+      List<Map<String, Object>> oldRows =
+          nbsTemplate.queryForList(
+              SELECT_DEATH_COUNTRY_FOR_AUDIT_BEFORE_UPDATE,
+              new MapSqlParameterSource(SURVIVOR_ID, survivorId));
 
       // update surviving record's 'DTH' postal_locator to selected value
       updatePersonField(survivorId, sourceId, UPDATE_DEATH_COUNTRY);
 
-      List<AuditUpdateAction> updateActions = oldRows.stream()
-          .map(row -> {
-            Map<String, Object> values = new HashMap<>();
-            values.put("cntry_cd", row.get("cntry_cd"));
+      List<AuditUpdateAction> updateActions =
+          oldRows.stream()
+              .map(
+                  row -> {
+                    Map<String, Object> values = new HashMap<>();
+                    values.put("cntry_cd", row.get("cntry_cd"));
 
-            return new AuditUpdateAction(
-                Map.of(POSTAL_LOCATOR_UID, row.get(POSTAL_LOCATOR_UID)),
-                values);
-          })
-          .toList();
+                    return new AuditUpdateAction(
+                        Map.of(POSTAL_LOCATOR_UID, row.get(POSTAL_LOCATOR_UID)), values);
+                  })
+              .toList();
 
       addAuditUpdateEntry(updateActions);
-
     }
   }
 
   private void addAuditUpdateEntry(List<AuditUpdateAction> updateActions) {
-    audit.getRelatedTableAudits()
+    audit
+        .getRelatedTableAudits()
         .add(new RelatedTableAudit("Postal_locator", updateActions, List.of()));
   }
 
@@ -444,5 +467,4 @@ public class PersonMortalityMergeHandler implements SectionMergeHandler {
     params.addValue(SOURCE_ID, sourceId);
     nbsTemplate.update(query, params);
   }
-
 }
